--- a/Contacts.Uwp/App.xaml
+++ b/Contacts.Uwp/App.xaml
@@ -2,6 +2,13 @@
     x:Class="Contacts.Uwp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Contacts.Uwp">
-
+    xmlns:local="using:Contacts.Uwp"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls">
+    <Application.Resources>
+        <muxc:XamlControlsResources>
+            <muxc:XamlControlsResources.MergedDictionaries>
+                <!-- Other app resources here -->
+            </muxc:XamlControlsResources.MergedDictionaries>
+        </muxc:XamlControlsResources>
+    </Application.Resources>
 </Application>
