--- a/Contacts.Uwp/AppMainPage.xaml
+++ b/Contacts.Uwp/AppMainPage.xaml
@@ -10,7 +10,7 @@
     mc:Ignorable="d"
     d:Width="640"
     d:Height="480"
-    Background="{ThemeResource SystemControlChromeMediumAcrylicWindowMediumBrush}">
+    Background="{ThemeResource SystemControlAcrylicWindowBrush}">
     <Page.Resources>
         <DataTemplate x:Key="AppListViewContactTemplate">
             <Grid x:Name="m_TemplateRootGrid">
@@ -25,7 +25,7 @@
 
     <Grid x:Name="m_RootGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="32"/>
             <RowDefinition Height="36"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
@@ -46,6 +46,13 @@
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
+
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
+            <Image Source="Assets/Square44x44Logo.targetsize-24_altform-unplated.png" Width="16" Margin="8 0 6 0"/>
+            <TextBlock Text="Contact" VerticalAlignment="Center"/>
+
+        </StackPanel>
+        
         <Grid x:Name="m_ContactOperationTopPanel"
               Grid.Row="1"
               Margin="8,0"
@@ -83,7 +90,9 @@
                           Grid.Column="2"
                           Width="32"
                           Height="32"
-                          Padding="0">
+                          Padding="0"
+                          Background="Transparent"
+                          BorderBrush="Transparent">
                 <Viewbox Width="12"
                          Height="12">
                     <SymbolIcon Symbol="Filter"/>
@@ -104,11 +113,11 @@
         <StackPanel x:Name="m_ContactOperationsBottomPanel"
                     Grid.Row="3"
                     Orientation="Horizontal"
-                    Padding="8"
+                    Padding="4"
                     Spacing="4">
-            <Button x:Name="m_SettingsPageButton"
-                    Width="32"
-                    Height="32"
+            <AppBarButton x:Name="m_SettingsPageButton"
+                    Width="40"
+                    Height="48"
                     Padding="0"
                     Background="Transparent"
                     BorderThickness="0">
@@ -116,10 +125,10 @@
                          Height="12">
                     <SymbolIcon Symbol="Setting"/>
                 </Viewbox>
-            </Button>
-            <Button x:Name="m_ListViewAddButton"
-                    Width="32"
-                    Height="32"
+            </AppBarButton>
+            <AppBarButton x:Name="m_ListViewAddButton"
+                    Width="40"
+                    Height="48"
                     Padding="0"
                     Background="Transparent"
                     BorderThickness="0">
@@ -127,11 +136,16 @@
                          Height="12">
                     <SymbolIcon Symbol="Add"/>
                 </Viewbox>
-            </Button>
+            </AppBarButton>
         </StackPanel>
 
         <Grid Grid.Column="1"
               Grid.RowSpan="4"
-              Background="{ThemeResource SystemControlAcrylicWindowBrush}"/>
+              Background="#40000000"
+              Width="1"
+              HorizontalAlignment="Left"/>
+        <Grid Grid.Column="1"
+              Grid.RowSpan="4"
+              Background="#05FFFFFF"/>
     </Grid>
 </Page>
