Define contact type models

--- a/Contacts.Uwp/AppMainPage.xaml
+++ b/Contacts.Uwp/AppMainPage.xaml
@@ -19,6 +19,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <muxc:PersonPicture x:Name="m_TemplateContactPicture" />
+                <StackPanel x:Name="m_TemplateContactDetails"/>
             </Grid>
         </DataTemplate>
     </Page.Resources>
