--- a/Contacts.Uwp/AppMainPage.xaml
+++ b/Contacts.Uwp/AppMainPage.xaml
@@ -15,7 +15,7 @@
         <common:HostBackdropAcrylicBrush 
             FallbackColor="#ECECF2"
             LuminosityColor="{ThemeResource BackgroundColor}"
-            Opacity="0.85"/>
+            Opacity="1"/>
     </Page.Background>
     <Page.Resources>
         <DataTemplate x:Key="AppListViewContactTemplate">
@@ -128,11 +128,12 @@
                 <AppBarButton x:Name="m_ListViewAddButton" Width="40" Label="Add Contact" Icon="Add"/>
             </CommandBar.PrimaryCommands>
         </CommandBar>
-        <Border Grid.Column="1"
+        <Border Grid.Column="0"
+                
                 Grid.RowSpan="4"
                 Background="{ThemeResource BorderColor}"
-                Width="0.5"
-                HorizontalAlignment="Left"/>
+                Width="1"
+                HorizontalAlignment="Right"/>
         <Grid Grid.Column="1"
               Grid.RowSpan="4"
               Background="{ThemeResource BackgroundColor2}"/>
